# aerovault

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
aerovault/: Cargo.toml
aerovault-cli/: Cargo.toml
aerovault-cli/src/: main.rs
aerovault/src/: constants.rs  crypto.rs  error.rs  format.rs  lib.rs  vault.rs
docs/: AEROVAULT-V2-SPEC.md
