[package]
name = "aerovault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme = "../README.md"

[dependencies]
aes-gcm-siv = { workspace = true }
aes-kw = { workspace = true }
aes-siv = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
zeroize = { workspace = true }
